# lui

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: config.rs  display.rs  gguf.rs  main.rs  opencode_config.rs  pi_config.rs  server.rs  ssh_tunnel.rs  websearch.rs
src/harness/: mod.rs  opencode.rs  pi.rs
src/settings/: build_args.rs  help.rs  migrate.rs  mod.rs  registry.rs  setting.rs  store.rs  ui.rs  value.rs
